More small styling fixes on mobile

--- a/src/Acts/CamdramBundle/Resources/public/stylesheets/app/forms.scss
+++ b/src/Acts/CamdramBundle/Resources/public/stylesheets/app/forms.scss
@@ -69,3 +69,10 @@ textarea {
     max-width: none;
   }
 }
+
+@media #{$small} {
+  label.right {
+    float:none !important;
+    text-align:left;
+  }
+}
